# CTU_BI-PA2_SemestralWork

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
doc/: Buildings.txt  Resources.txt  classes.drawio  world_stats.txt
src/: BuildingGenerator.cpp  BuildingGenerator.h  SemestralWork.cpp  SemestralWork.h  generate.cpp  generate.h  main.cpp
src/Core/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  core.h
src/Game/: Exportable.h  GameLogic.cpp  GameLogic.h  WorldStats.cpp  WorldStats.h
src/Game/Objects/: Building.cpp  Building.h  BuildingConfig.cpp  BuildingConfig.h  Buildings.h  World.cpp  World.h
src/Game/Objects/Buildings/: CityHall.cpp  CityHall.h
src/Graphics/: Entity.cpp  Entity.h  HasPosition.cpp  HasPosition.h  Moveable.cpp  Moveable.h  Rectangle.cpp  Rectangle.h  Renderable.h
src/System/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Logger.cpp  Logger.h  Trace.cpp  Trace.h
src/System/Containers/: IdentifyingCollection.cpp  IdentifyingCollection.h
src/Tools/: BuildingConfigGenerator.cpp  BuildingConfigGenerator.h
